--- a/index.html
+++ b/index.html
@@ -6,6 +6,68 @@
     <title>Računalniške storitve</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <style>
+        section
+        {
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+        .carousel-container
+        {
+            width: 90% ;
+            margin: 0 auto ;
+        }
+        .carousel-item img
+        {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            filter: brightness(85%);
+            transition: filter 0.3s ease;
+
+        }
+        .carousel-item img:hover
+        {
+            filter: brightness(100%)
+        }
+        .carousel-caption
+        {
+            background-color: rgba(0,0,0,0.5);
+            padding: 1rem;
+            border-radius: 10px;
+        }
+        .btn-dark
+        {
+            margin-top: 20px;
+        }
+        .team-member, .news-item
+        {
+            margin-bottom: 30px;
+        }
+        .news-item img
+        {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+        .news-item h4
+        {
+            margin-top: 10px;
+        }
+        .news-item p {
+        max-height: 120px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        text-align: center;
+    }
+
+
+
+
+
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-white shadow-sm">
@@ -15,13 +77,13 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="storitve.html" class="nav-link">Storitve</a></li>
-                    <li class="nav-item">O nas</li>
-                    <li class="nav-item">Kontakt</li>
+                    <li class="nav-item"><a href="onas.html" class="nav-link">O nas</a></li>
+                    <li class="nav-item"><a href="kontak.html" class="nav-link">Kontakt</a></li>
                 </ul>
       </div>
     </div>
     </nav>
-
+    <!--Pozdravna sekcija-->
     <section class="text-center">
         <h1>
             Dobrodošli na naši spletni strani!
@@ -32,6 +94,103 @@
         <input class="btn btn-dark" type="text" value="Oglej si naše storitve">
 
       </section>
+    
+      <!--Carousel-->
+      <section class="carousel-container py-4">
+        <div class="carousel slide" data-bs-ride="carousel" id="storitevCarousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="Slike/pexels-cookiecutter-1148820.jpg" alt="" srcset="">
+                    <div class="carousel-caption text-white">
+                        <h5>Digitalna forenzika</h5>
+                        <p>Analiza podatkovnih nosilcev, odkrivanje izbirasanih datotek, rekonstrukcija dogodkov.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="Slike/pexels-divinetechygirl-1181210.jpg" alt="" srcset="">
+                    <div class="carousel-caption text-white">
+                        <h5>Kibernetska varnost</h5>
+                        <p>Zaščita sistemov, odkrivanje ranljivosti in odziv na incidente.</p>
+                    </div>
+                </div>
+                <div class="carousel-item ">
+                    <img src="Slike/pexels-johnpet-2115257.jpg" alt="" srcset="">
+                    <div class="carousel-caption text-white">
+                        <h5>Pridobivanje dokazov</h5>
+                        <p>Zbiranje digitalnih podatkov za pravne postopke in preiskave.</p>
+                    </div>
+                </div>
+                <div class="carousel-item ">
+                    <img src="Slike/pexels-joshsorenson-1714208.jpg" alt="" srcset="">
+                    <div class="carousel-caption text-white">
+                        <h5>Izobraževanje</h5>
+                        <p>Izobraževanje iz področja računalništva in informatike.</p>
+                    </div>
+                </div>
+                <div class="carousel-item ">
+                    <img src="Slike/pexels-tranmautritam-225502.jpg" alt="" srcset="">
+                    <div class="carousel-caption text-white">
+                        <h5>Svetovanje</h5>
+                        <p>Svetovanje na podlagi računalniških storitev.</p>
+                    </div>
+                </div>
+                
+            </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#storitevCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>  
+        <button class="carousel-control-next" type="button" data-bs-target="#storitevCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>  
+        </div>
+      </section>
+
+      <!--Naši cilji-->
+      <section class="container">
+        <h2 class="text-center">Naši cilji</h2>
+        <p class="text-center"> Naša naloga je ponuditi vrhunske storitve na področju računalništva, informatike, zaščite osebnih podatkov, digitalne varnosti, programiranja, oblikovanja spletnih trani, ter zbiranju podatkov.</p>
+
+      </section>
+      <!--Novice-->
+      <section class="container">
+        <h2 class="text-center">Novice</h2>
+        <div class="row">
+            <div class="col-md-3 news-item">
+                <img src="Slike/Novice/pexels-goumbik-590016.jpg" alt="">
+                <h4>Novica 1</h4>
+                <p style="height: 150px;">Naša najnovejša storitev za zaščito osebnih podatkov je sedaj na voljo!</p>
+                <button class="btn btn-dark">Preberi več</button>
+            </div>
+            <div class="col-md-3 news-item">
+                <img src="Slike/Novice/pexels-asphotograpy-95916.jpg" alt="">
+                <h4>Novica 2</h4>
+                <p style="height: 150px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus omnis esse doloribus ullam libero vero tempora distinctio fuga totam blanditiis corrupti odio ducimus dignissimos sed suscipit ratione, sint impedit. Quibusdam.</p>
+                <button class="btn btn-dark">Preberi več</button>
+            </div>
+            <div class="col-md-3 news-item">
+                <img src="Slike/Novice/pexels-divinetechygirl-1181346.jpg" alt="">
+                <h4>Novica 3</h4>
+                <p style="height: 150px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, dolores, officia iste accusamus fuga expedita numquam cumque illum sint odit ut a tempore ipsa! Architecto molestias explicabo dolores placeat in?</p>
+                <button class="btn btn-dark">Preberi več</button>
+            </div>
+            <div class="col-md-3 news-item">
+                <img src="Slike/Novice/pexels-pixabay-267350.jpg" alt="">
+                <h4>Novica 4</h4>
+                <p style="height: 150px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, illo reiciendis enim odit molestiae amet, consequuntur error fuga laudantium doloribus quia dignissimos magnam labore quam voluptates esse exercitationem, tempore vel.</p>
+                <button class="btn btn-dark">Preberi več</button>
+            </div>
+
+
+        </div>
+
+      </section>
+
+      <footer class="bg-dark text-white p-4">
+        <p style="display: inline; padding-right: 20px;">Zasebnost</p>
+        <p style="display: inline;">Piškotki</p>
+
+      </footer>
+
 
 
 
