--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
     <nav class="navbar navbar-expand-lg bg-white shadow-sm">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">Računalniške storitve</a>  
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a href="storitve.html" class="nav-link">Storitve</a></li>
+              <li class="nav-item"><a href="kontakt.html" class="nav-link">Kontakt</a></li>
+          </ul>
             <button class="navbar-toggler fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>    
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a href="storitve.html" class="nav-link">Storitve</a></li>
-                    <li class="nav-item"><a href="kontakt.html" class="nav-link">Kontakt</a></li>
+                    <li class="nav-item"><a href="register.php" class="nav-link">Registracija</a></li>
+                    
                 </ul>
       </div>
     </div>
